add standard git workflow2

--- a/app/views/ideator_lessons/lessons/lesson_10.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_10.html.erb
@@ -82,4 +82,6 @@ Idea.create(description: "Apples are almost pears.", author: "Fruit Expert")
   Don't worry if this all doesn't make sense just yet. The main focus here is to keep on building to create that momentum for you to learn faster.
 </p>
 
-
+<p>
+  Let's go through the standard git workflow.
+</p>
