--- a/app/views/ideator_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_11.html.erb
@@ -26,4 +26,6 @@
   Let's go back into the browser and refresh the page. Awesome! You should now see each idea wrapped around in a panel.
 </p>
 
-
+<p>
+  Let's go through the standard git workflow.
+</p>
