--- a/app/views/ideator_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_12.html.erb
@@ -149,4 +149,7 @@ end
   Now let's test this out. Enter an idea and author and press 'Submit'. Voila! You should see your idea on your page, just like that!
 </p>
 
+<p>
+  Let's go through the standard git workflow.
+</p>
 
