--- a/app/views/ideator_lessons/lessons/lesson_15.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_15.html.erb
@@ -48,3 +48,7 @@ end
 <p>
  Pretty simple right? :) Congrats on writing your first validation!
 </p>
+
+<p>
+  Let's go through the standard git workflow.
+</p>
