--- a/app/views/ideator_lessons/lessons/lesson_17.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_17.html.erb
@@ -34,7 +34,11 @@ get 'random' =&gt; 'ideas#random'
 </p>
 
 <p>
-  Now that we've set up these routes, let's go into our controller and set the view up for these two routes.
+  Make sure you go through the standard git workflow.
+</p>
+
+<p>
+  Now that we've set up these routes, let's go into our controller and set up the view for these two routes.
 </p>
 
 
