--- a/app/views/ideator_lessons/lessons/lesson_18.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_18.html.erb
@@ -59,5 +59,11 @@
 <br class="clear">
 
 <p>
+  Make sure you go through the standard git workflow.
+</p>
+
+
+<p>
   Awesome! Let's now move on to building the "Random" page.
 </p>
+
