--- a/app/views/ideator_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_19.html.erb
@@ -130,6 +130,9 @@
 
 <br class="clear">
 
+<p>
+  Let's now go through the standard git workflow.
+</p>
 
 <p>
   Congratulations! You've now officially built a fully functional app! The next few steps will be the final touches to get your app fully in shape :)
