--- a/app/views/ideator_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_7.html.erb
@@ -97,6 +97,14 @@
 	Feel free to play around with these in Google Developer Tools. You can achieve many different styles by playing around with font-weight and letter-spacing. Super fun stuff!
 </p>
 
+<p>
+  Let’s now commit this to GitHub so we don’t lose any of the changes. From now on, we'll call this the standard git workflow.
+</p>
+
+<code>git add .</code><br>
+<code>git commit -am “Style navbar”</code><br>
+<code>git push origin master</code>
+
 
 
 <script>
