--- a/app/views/ideator_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_8.html.erb
@@ -64,6 +64,8 @@
   Notice how I used font awesome icons to make the social logos look awesome. Browsing around font awesome's site to look for cool icons is fun! :)
 </p>
 
-<br>
+<p>
+  Let's go through the standard git workflow.
+</p>
 
 
