--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -50,9 +50,9 @@ rails generate model Idea
   Now that we have edited our migration file, we have to tell rails to migrate these columns. Run the following command:
 </p>
 
-<code>
+<pre><code>
 rake db:migrate
-</code>
+</code></pre>
 
 <p>
   As a rule of thumb, every time you run a migration, you should restart your server. So let's go ahead and restart our server.
@@ -66,4 +66,7 @@ rake db:migrate
   Awesome! You've set up your first model! :) The fun will soon begin!
 </p>
 
+<p>
+  Let's go through the standard git workflow.
+</p>
 
