--- a/app/views/ideator_lessons/lessons/lesson_14.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_14.html.erb
@@ -90,7 +90,9 @@ end
   Why do we need to check if the idea was updated successfully? We'll talk about <strong>validations</strong> and get into why in the next lesson.
 </p>
 
-
+<p>
+  Let's go through the standard git workflow.
+</p>
 
 
 
