--- a/app/views/ideator_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_20.html.erb
@@ -76,4 +76,6 @@
   Refresh the page and you should see that the page links are now centered. Cool!
 </p>
 
-
+<p>
+  Let's now go through the standard git workflow.
+</p>
