add pricing page

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -24,9 +24,22 @@
                 <!-- <li class="page-scroll">
                     <a href="#about">About</a>
                 </li> -->
-                <li class="page-scroll">
-                  <%= link_to 'SETTINGS', edit_user_registration_path if user_signed_in? %>
-                </li>
+                
+                <% if user_signed_in? %>
+
+                    <li class="page-scroll">
+                      <%= link_to 'SETTINGS', edit_user_registration_path %>
+                    </li>
+
+                <% else %>
+
+                    <li class="page-scroll">
+                      <%= link_to 'PRICING', pricing_path %>
+                    </li>
+
+                <% end %>
+
+                
                 <li class="page-scroll">
                     <%= link_to 'LOG IN', new_user_session_path unless user_signed_in? %>
                     <%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete if user_signed_in? %>         
