--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -61,6 +61,14 @@
 	margin: 0 auto;
 }
 
+.pricing_box {
+  height: 200px;
+  font-size: 20px;
+  margin: 0 auto;
+  width: 350px;
+  text-align: left;
+}
+
 .clear {
 	clear:both;
 }
