--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,9 +14,17 @@
                       <p class="alert alert-danger"><%= alert %></p>
                     <% end %>
 
-                    <span class="name">Start Coding</span>
+                    <span class="name">Learn How To Code</span>
                     <hr class="star-light">
                     <span class="skills">HTML/CSS - Ruby on Rails - JavaScript/jQuery - Git/Github</span>
+
+                    <div class="row">
+                      <div class = "col-xs-10 col-xs-offset-1">
+                        <p style = "font-weight:100;margin:30px 0px;">
+                          <strong>We believe</strong> that a friendly and approachable learning environment is key to learning new skills. <strong>We believe</strong> in intrinsic motivation, where you just love what you are doing that you can't help but learn more and more. <strong>We believe</strong> in giving every student not only the technical support, but also the emotional support necessary to learn how to code.
+                        </p>
+                      </div>
+                    </div>
                     
                     <div class = "join-buttons">
                       <%= link_to 'START CODING NOW', new_user_registration_path, class: "btn btn-danger btn-lg" %>
@@ -56,7 +64,7 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Who Is Techrise For?</h2>
+                <h2>Is Techrise For Me?</h2>
                 <hr class="star-light">
             </div>
         </div>
@@ -89,7 +97,7 @@
 
           <div class="row">
             <div class="col-lg-12 text-center">
-              <h2 style = "font-weight: 600;margin:60px 0px 30px 0px;">DOES THIS SOUND LIKE YOU?</h4>
+              <h2 style = "font-weight: 600;margin:60px 0px 30px 0px;">DOES THIS SOUND LIKE YOU?</h2>
               <div class="col-lg-8 col-lg-offset-2 text-center">
                 <%= link_to "YES, GET ME ONBOARD", new_user_registration_path, class: "btn btn-danger btn-lg", style: "color:white;" %>
               </div>
@@ -112,6 +120,7 @@
         </div>
         <div class="row">
           <div class = "col-sm-12 col-md-4 text-center">
+            <div class = "why_techrise_icons"><i class="fa fa-graduation-cap"></i></div>
             <h3>1-on-1 Mentor Sessions</h3>
             <p>
               Ask questions individually to your mentor and get the support you need. By having a mentor, you can learn quicker and more effectively.
@@ -119,12 +128,14 @@
           </div>
 
           <div class = "col-sm-12 col-md-4 text-center">
+            <div class = "why_techrise_icons"><i class="fa fa-globe"></i></div>
             <h3>Build Real World Applications</h3>
             <p>
               Instead of going just learning syntax and theory, we believe you can learn faster by actually building websites and web applications from day 1.
             </p>
           </div>
           <div class = "col-sm-12 col-md-4 text-center">
+            <div class = "why_techrise_icons"><i class="fa fa-users"></i></div>
             <h3>Learn from People Like You</h3>
             <p>
               Our mentors were people just like you - beginners with no experience in coding - just until recently. That's why they know exactly how to go from having no experience in coding to becoming a great developer.
@@ -170,12 +181,11 @@
               <p>
                 By learning to code with us, we provide that support so that you can start building your ideas.
               </p>
-              <p>
-                Click the button below and start your coding journey.
-              </p>
             </div>
 
             <div class="col-lg-8 col-lg-offset-2 text-center" style = "padding:30px;">
+                <h3 style = "font-weight: 600;">Click the button below to</h3>
+                <h3 style = "font-weight: 600;margin:-5px 0px 30px 0px;">start your coding journey.</h3>
                 <%= link_to 'START CODING NOW', new_user_registration_path, class: "btn btn-danger btn-lg", style: "color:white;" %>
             </div>
         </div>
