--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -76,9 +76,9 @@ p {
   height: 200px;
   font-size: 20px;
   margin: 0 auto;
-  width: 350px;
   text-align: left;
   font-weight: 100;
+  margin-bottom: 20px;
 }
 
 .row {
