--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -34,7 +34,7 @@
 
             <div class = "row">
 
-              <div class = "col-lg-12">
+              <div class = "col-lg-8 col-lg-offset-2">
 
                 <ul class = "unindented_ul pricing_box">
                   <li><i class="fa fa-check"></i> Lifetime Access to Course Materials</li>
@@ -69,7 +69,7 @@
 
             <div class="row">
 
-              <div class = "col-lg-12">
+              <div class = "col-lg-8 col-lg-offset-2">
 
                   <ul class = "unindented_ul pricing_box">
                     <li><i class="fa fa-check"></i> Lifetime Access to Course Materials</li>
