--- a/app/views/intro/lessons/lesson_5.html.erb
+++ b/app/views/intro/lessons/lesson_5.html.erb
@@ -69,7 +69,7 @@
 
 <br>
 <br>
-<%= link_to "Alright, I'm ready!", "", class: 'btn btn-danger btn-lg btn-block' %>
+<%= link_to "Alright, I'm ready!", courses_path, class: 'btn btn-danger btn-lg btn-block' %>
 
 <br class = "clear">
 
