--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,5 +1,5 @@
 <div class = "row">
-	<h1>Start Your Coding Journey</h1>
+	<h1 style="text-align:center;">Start Your Coding Journey</h1>
 
 	<%= render partial: 'course', locals: {course: 'Intro', course_name: "An introduction to web development and why it's so cool.", available: true, course_link: intro_path} %>
 
@@ -7,7 +7,7 @@
 	<!-- , lessons: HTMLCSS::LESSONS -->
 	<%= render partial: 'course', locals: {course: 'Ruby', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of any programming language by learning Ruby.', available: false} %>
 
-	<%= render partial: 'course', locals: {course: 'Ideator - An idea sharing app', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: true, course_link: ideator_path} %>
+	<%= render partial: 'course', locals: {course: 'Ideator - An idea sharing app', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: false, course_link: ideator_path} %>
 	<!-- , lessons: RubyOnRails::LESSONS -->
 
 	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'With JavaScript, you can manipulate the web page in super fun ways.', available: false} %>
