--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -19,8 +19,8 @@
                     <span class="skills">HTML/CSS - Ruby on Rails - JavaScript/jQuery - Git/Github</span>
 
                     <div class="row">
-                      <div class = "col-xs-10 col-xs-offset-1">
-                        <p style = "font-weight:100;margin:30px 0px;">
+                      <div class = "col-xs-12 col-md-10 col-md-offset-1">
+                        <p style = "font-weight:100;margin:30px 0px;text-align:left;">
                           <strong>We believe</strong> that a friendly and approachable learning environment is key to learning new skills. <strong>We believe</strong> in intrinsic motivation, where you just love what you are doing that you can't help but learn more and more. <strong>We believe</strong> in giving every student not only the technical support, but also the emotional support necessary to learn how to code.
                         </p>
                       </div>
