--- a/app/views/static_pages/congratulations.html.erb
+++ b/app/views/static_pages/congratulations.html.erb
@@ -41,33 +41,14 @@
                 </p>
 
                 <p>
-                  Our mission at Techrise is to get people hooked into web development and to teach people how to build things in a fun way. In the best case scenario, we would like to offer everything for free. On the other hand, we also want to make this project sustainable in order to keep delivering fun and engaging content. If you are interested in learning with Techrise, please fill out the form below and we'll keep you updated.
+                  Our mission at Techrise is to get people hooked into web development and to teach people how to build things in a fun way. In the best case scenario, we would like to offer everything for free. On the other hand, we also want to make this project sustainable in order to keep delivering fun and engaging content. You can take a look at the prices <%= link_to 'here', pricing_path %>. If you are interested in learning with Techrise, please fill out the form below and we'll keep you updated.
                 </p>
 
                 <p>
                   Techrise is currently in beta, meaning we are still in the process of creating and testing the curriculum from scratch. It would be greatly appreciated if you could also kindly leave some feedback on the courses about what you liked, what you didn't like, what you want in future lessons, or anything else that might come to your mind. We'll send you a personal thank you note and send you future updates :)
                 </p>
 
-
-                
-
-                <!-- <ul class = "unindented_ul pricing_box">
-                  <li><i class="fa fa-check"></i> Lifetime Access to Course Materials</li>
-                  <li><i class="fa fa-check"></i> Learn How to Develop Complete Ruby on Rails Applications</li>
-                  <li><i class="fa fa-check"></i> Train Your Brain With Algorithms</li>
-                  <li><i class="fa fa-check"></i> Access to Q & A Forums</li>
-                </ul> -->
-                  
               </div>
-
-              <!-- <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <h3 class = "pull-right"><i><u>$498.00</u></i></h3>
-                  <br class = "clear">
-                  <br class = "clear">
-                  <%= link_to "JOIN BASIC", new_user_registration_path, class: "btn btn-danger btn-lg", style: "color:white;" %>
-                </div>
-              </div> -->
             </div>
           </div>
           <!-- end of What's Next section -->          
