--- a/app/views/static_pages/congratulations.html.erb
+++ b/app/views/static_pages/congratulations.html.erb
@@ -41,7 +41,7 @@
                 </p>
 
                 <p>
-                  Our mission at Techrise is to get people hooked into web development and to teach people how to build things in a fun way. In the best case scenario, we would like to offer everything for free. On the other hand, we also want to make this project sustainable in order to keep delivering fun and engaging content. You can take a look at the prices <%= link_to 'here', pricing_path %>. If you are interested in learning with Techrise, please fill out the form below and we'll keep you updated.
+                  Our mission at Techrise is to get people hooked into web development and to teach people how to build things in a fun way. In the best case scenario, we would like to offer everything for free. On the other hand, we also want to make this project sustainable in order to keep delivering fun and engaging content. You can take a look at the prices <%= link_to 'here', pricing_path, style: "color: #2C3E50;" %>. If you are interested in learning with Techrise, please fill out the form below and we'll keep you updated.
                 </p>
 
                 <p>
