--- a/app/views/admin_dashboard/index.html.erb
+++ b/app/views/admin_dashboard/index.html.erb
@@ -8,6 +8,8 @@
         <li>Name: <%= user.name %></li>
         <li>Email: <%= user.email %></li>
         <li>Admin: <%= user.admin %></li>
+        <li>Last Logged In: <%= user.last_sign_in_at %></li>
+        <li>Sign In Count: <%= user.sign_in_count %></li>
       </ul>
     <% end %>
 
