--- a/app/views/ideator_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_3.html.erb
@@ -12,9 +12,10 @@
 	So here’s what I did for this app. I took out a piece of paper and just drew up some rough sketches for the app like this:
 </p>
 
+<%= image_tag 'ideator_wireframes.jpg', class: 'screenshot' %>
 
 <p>
-	You can see how each page has a wireframe.
+	As you can see, the wireframes are pretty rough...but it gets the job done! The key is to visualize what features you want on your web application so that it's easier to think through how to build your web application.
 </p>
 
 <p>
@@ -22,15 +23,15 @@
 </p>
 
 <p>
-	This is something you won’t understand right now, but just bear with me here and try to understand the gist of it. So in our app, we want the ability to post ideas. To save those ideas into the app, we need to store the information in a database.
+	This is something you won’t understand right now, but try to understand the gist of it. So in our app, we want the <strong>ability to post ideas</strong>. To save those ideas into the app, <strong>we need to store the information in a database</strong>.
 </p>
 
 <p>
-	Let’s think about what pieces of information we want to store for this app. We want one piece of information which would be a description of what the idea is, and another which would be the author of the idea. 
+	Let’s think about what pieces of information we want to store for this app. We want one piece of information which would be a <strong>description</strong> of what the idea is, and another which would be the <strong>author</strong> of the idea.
 </p>
 
 <p>
-	So each idea will have two pieces of information attached to it, a description and an author. 
+	So each idea will have two pieces of information attached to it, a <code>description</code> and an <code>author</code>. 
 </p>
 
 <p>
