--- a/app/views/ideator_lessons/lessons/lesson_6.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_6.html.erb
@@ -9,11 +9,15 @@
 </p>
 
 <p>
-	What we want is a brand on the left and 3 links aligned to the right.
+	What we want is a brand name on the left and 3 links aligned to the right.
 </p>
 
 <p>
-	If you need a hint, refer to this lesson.
+  Take a look at the completed app <a href="http://techrise-ideator.herokuapp.com/" target="_blank">here</a> for reference. Don't worry about actually implementing the links, just leave the URLs as blank (&lt;a&gt; href = "" &lt;/a&gt;). Also don't worry about the styling as we'll get to that in the next lesson. Just focus on implementing the bootstrap navbar into your web app for now.
+</p>
+
+<p>
+	If you need a hint, refer to <a href="/html_css/7" target="_blank">this lesson</a>.
 </p>
 
 <p>
