--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -10,9 +10,9 @@
 
 <p>After you've done everything in that link, in your console type in</p>
 
-<code>git init .</code><br>
-<code>git add .</code><br>
-<code>git commit -am “Initial commit”</code><br>
+<pre><code class="bash">git init .</code class="bash"></pre>
+<pre><code class="bash">git add .</code class="bash"></pre>
+<pre><code class="bash">git commit -am “Initial commit”</code class="bash"></pre>
 
 <p>
 	Now let’s go into GitHub’s front page and create a new repository. On the left hand side, you should see a green button called “+ New repository”. Click on that button and just fill in the box that says “Repository name”.
@@ -34,8 +34,8 @@
 	Now what you’re going to do is copy the code right beneath that and paste it into your terminal. It should look something like this:
 </p>
 
-<code>git remote add origin git@github.com:username/test.git</code><br>
-<code>git push -u origin master</code><br>
+<pre><code class="bash">git remote add origin git@github.com:username/test.git</code class="bash"></pre>
+<pre><code class="bash">git push -u origin master</code class="bash"></pre>
 
 <p>
 	Once you’ve pasted and entered that into your terminal, you’re all set! GitHub is ready to go!
