--- a/app/views/ideator_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_8.html.erb
@@ -8,7 +8,34 @@
   If we run a google search for "bootstrap sticky footer", we can find a StackOverflow post that addresses this issue <a href = "http://stackoverflow.com/a/19758234/5456016" target = "_blank">here</a>. What we're going to do is use parts of this post to make it look nice. Let's copy the code below into our <code>application.css.scss</code>(I changed the footer height to be 120px instead of 60px).
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/3b14aac6897e29b3207b.json"></div>
+<pre><code class="css">
+/* Styles go here */
+
+/* Sticky footer styles
+-------------------------------------------------- */
+
+html,
+body {
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -120px;
+  /* Pad bottom by footer height */
+  padding: 0 0 120px;
+}
+
+/* Set the fixed height of the footer here */
+#footer {
+  height: 120px;
+  background-color: #f5f5f5;
+}
+</code></pre>
 
 <p>
   Then what we're going to do is wrap all of our content in a div with an id of "wrap". So right before the code for the navbar begins (right after the opening body tag and right before the opening nav), let's add &lt;div id = "wrap"&gt; and close the div right before the closing body tag.
@@ -18,7 +45,19 @@
   Right after the closing div that we just inserted, let's steal the footer code from the StackOverflow post above and paste it into our code. It should look something like this.
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/49dc11408667e67306aa.json"></div>
+<pre><code class="html">
+&lt;!--closing div for div id = "wrap"--&gt;
+&lt;/div&gt;
+
+&lt;div id="footer"&gt;
+  &lt;div class="container"&gt;
+    
+  &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
 
 <p>
 	Make sure to put the footer code right before the closing body tag and also right after the closing div tag for the div id = "wrap".
@@ -52,16 +91,71 @@
 	Let's add 2 more of these divs in the footer to make 3 rows on a medium screen. Let's also remember not to forget to wrap it in a row. So now it should look something like this.
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/92eebd0fd11cc8a3d4fb.json"></div>
+<pre><code class="html">
+&lt;!--closing div for div id = "wrap"--&gt;
+&lt;/div&gt;
+
+&lt;div id="footer"&gt;
+  &lt;div class="container"&gt;
+    &lt;div class = "row"&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
 
 <p>
   Now we can add content inside of here. Feel free to add whatever you want inside of here. This is what I added to my app.
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/1db9562330648194efe9.json"></div>
+<pre><code class="html">
+&lt;!--closing div for div id = "wrap"--&gt;
+&lt;/div&gt;
+
+&lt;div id="footer"&gt;
+  &lt;div class="container"&gt;
+    &lt;div class = "row"&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;Contact&lt;/h4&gt;
+        &lt;p&gt;techrisecoding@gmail.com&lt;/p&gt;
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;Find Us&lt;/h4&gt;
+        &lt;div style = "font-size: 40px;"&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-facebook-official social" &gt;&lt;/i&gt;&lt;/a&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-twitter-square social" &gt;&lt;/i&gt;&lt;/a&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-linkedin-square social" &gt;&lt;/i&gt;&lt;/a&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;&copy; Techrise 2016&lt;/h4&gt;
+        &lt;p&gt;All Rights Reserved&lt;/p&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
 
 <p>
   Notice how I used font awesome icons to make the social logos look awesome. Browsing around font awesome's site to look for cool icons is fun! :)
+</p>
+
+<p>
+  <strong>Note:</strong> If you are going to use Font Awesome, you need to make sure to include the CDN in the <code>head</code> section of <code>application.html.erb</code>. If you are up for the challenge, try to do that yourself. If you don't know how to do it, Google it :)
 </p>
 
 <p>
