take out pricing pages

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -51,9 +51,9 @@
                     <li class="page-scroll">
                       <a href="/#contact_us">Contact Us</a>
                     </li>
-                    <li class="page-scroll">
+<!--                     <li class="page-scroll">
                       <%= link_to 'PRICING', pricing_path %>
-                    </li>
+                    </li> -->
 
                 <% end %>
 
