--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -18,13 +18,13 @@
                     <hr class="star-light">
                     <span class="skills">HTML/CSS - Ruby on Rails - JavaScript/jQuery - Git/Github</span>
 
-                    <div class="row">
+                    <!-- <div class="row">
                       <div class = "col-xs-12 col-md-10 col-md-offset-1">
                         <p style = "font-weight:100;margin:30px 0px;text-align:left;">
                           <strong>We believe</strong> that a friendly and approachable learning environment is key to learning new skills. <strong>We believe</strong> in intrinsic motivation, where you just love what you are doing that you can't help but learn more and more. <strong>We believe</strong> in giving every student not only the technical support, but also the emotional support necessary to learn how to code.
                         </p>
                       </div>
-                    </div>
+                    </div> -->
                     
                     <div class = "join-buttons">
                       <%= link_to 'START CODING NOW', new_user_registration_path, class: "btn btn-danger btn-lg" %>
